# mnist-project-playground

./: .gitignore  app.py  mnist_loader.py  network.py  network2.py  pyproject.toml
from_scratch/: app.py  network.py  network2.py  readme.md  test.ipynb  test_data_sigma.csv  tools.py
from_scratch/mnist_np/: download_mnisk.py
mnist_np/: download_mnisk.py
pytorch/Malia/: pytorc-version.py  pytorch_neural_network_malia.ipynb
pytorch/jasmin/: pytorch.py  pytorch2.py  pytorch3.ipynb  torch_cpu.py
pytorch/sebastian/: __init__.py  calc.R  calc.ipynb  data_exploration.ipynb  model_cross_entropy_relu.ipynb  model_cross_entropy_relu_mandag.csv  model_cross_entropy_sigmoid.ipynb  model_mean_squared.ipynb  readme.md  test.ipynb  test_relu.csv  tools.py
results/: calc.ipynb  model_cross_entropy_relu_jasmin.csv  model_cross_entropy_sigmoid.csv
