[tool.poetry]
name = "is-project"
version = "0.1.0"
description = ""
authors = ["Sebastian Vargr <sebbdk@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
