[tool.poetry]
name = "is-project"
version = "0.1.0"
description = ""
authors = ["Sebastian Vargr <sebbdk@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "1.23.0"
numba = "^0.58.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
