[tool.poetry]
name = "is-project"
version = "0.1.0"
description = ""
authors = ["Sebastian Vargr <sebbdk@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "1.23.0"
numba = "^0.58.1"
torch = "^2.1.2"
torchvision = "^0.16.2"
matplotlib = "^3.8.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
